Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-3985

crash: uninstall soname 'a'

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.0, 5.5.28a
    • 10.0.2, 5.5.29
    • None
    • None
    • Windows, Linux

    Description

      How to repeat:
      -----------------
      uninstall soname 'a';

      Call stack:
      --------------
      Version: '10.0.0-MariaDB' socket: '' port: 3306 Source distribution
      121227 18:39:49 [ERROR] mysqld got exception 0xc0000005 ;

      mysqld.exe!mysql_uninstall_plugin()[sql_plugin.cc:2266]
      mysqld.exe!mysql_execute_command()[sql_parse.cc:4685]
      mysqld.exe!mysql_parse()[sql_parse.cc:6061]
      mysqld.exe!dispatch_command()[sql_parse.cc:1219]
      mysqld.exe!do_command()[sql_parse.cc:951]
      mysqld.exe!threadpool_process_request()[threadpool_common.cc:225]
      mysqld.exe!io_completion_callback()[threadpool_win.cc:568]
      kernel32.dll!BaseFormatTimeOut()

      Attachments

        Activity

          People

            serg Sergei Golubchik
            sbester1 sbester1
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25h
                0.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.