MDEV-3985 crash: uninstall soname 'a'